--- a/module-3/02_CSS_Selectors/lecture-student/trello/index.html
+++ b/module-3/02_CSS_Selectors/lecture-student/trello/index.html
@@ -8,7 +8,7 @@
     <link
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
-    />        
+    />  <link href="style.css" rel="stylesheet"/>      
   </head>
 
   <body>
@@ -50,7 +50,7 @@
         <a href="#">Add another card</a>
       </div>
 
-      <!-- <div class="trello-list">
+      <div class="trello-list">
         <h2>Module 1 Week 1</h2>
         <ol class="cards">
           <li class="card">
@@ -146,7 +146,7 @@
           <li class="card">Capstone Day 2</li>
         </ol>
         <a href="#">Add another card</a>
-      </div> -->
+      </div> 
     </main>
   </body>
 </html>
